# application

./: .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile.apiserver  Dockerfile.controller  Dockerfile.docs  Dockerfile.install  Dockerfile.ppc64le  Makefile  OWNERS  OWNERS_ALIASES  PROJECT  README.md  SECURITY_CONTACTS  VERSION  VERSION-DEV  WORKSPACE  go.mod  go.sum  main.go
.github/: dependabot.yml
api/v1beta1/: application_types.go  application_types_test.go  groupversion_info.go  v1beta1_suite_test.go  zz_generated.deepcopy.go
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
cmd/installer/: main.go
cmd/manager/: main.go
config/: kustomization.yaml
config/certmanager/: certificate.yaml
config/crd/: kustomization.yaml  kustomizeconfig.yaml
config/crds/: app_v1beta1_application.yaml  kustomization.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  manager_image_patch.yaml  manager_webhook_patch.yaml
config/kube-app-manager/: kustomization.yaml  kustomizeconfig.yaml  manager.yaml
config/manager/: kustomization.yaml  (+1 more)
controllers/: application_controller.go  application_controller_test.go  condition.go  status.go  suite_test.go
deploy/: kube-app-manager-aio.yaml  kube-app-manager-aio_dev.yaml
docs/: api.md  develop.md  example.yaml  quickstart.md  release.md
e2e/: app-with-bad-deployment.yaml  e2e-prow.sh  kind-config.yaml  main.go  main_test.go  test_e2e.sh  wordpress_test.go
enhancements/: inventory-object.md
hack/: install.yaml  update-codegen.sh
sample/: application.yaml
(+171 files in other folders)
