
# gazelle:proto disable
# gazelle:exclude vendor/github.com/json-iterator/go/skip_tests
load("@io_bazel_rules_go//go:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "github.com/kubernetes-sigs/apps_application",
    external = "vendored",
    args = [
        "-build_file_name",
        "BUILD.bazel",
    ],
)
